<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha"
        android:id="@+id/calendar_label"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/name_textInput"
        android:layout_centerHorizontal="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColorHint="@color/colorAccent"
        android:layout_above="@+id/car_textInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputEditText
            android:paddingTop="15dp"
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_owner_car"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:inputType="textCapWords"
            android:enabled="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/car_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColorHint="@color/colorAccent"
        android:layout_above="@+id/mileage_textInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp">

        <android.support.design.widget.TextInputEditText
            android:paddingTop="15dp"
            android:id="@+id/car_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_car"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:inputType="textCapWords"
            android:enabled="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mileage_textInput"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="200dp"
        android:textColorHint="@color/colorAccent"
        android:layout_alignTop="@+id/year_car_textInput">

        <android.support.design.widget.TextInputEditText
            android:paddingTop="15dp"
            android:id="@+id/mileage_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mileage_car"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:inputType="text|number"
            android:enabled="true"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/year_car_textInput"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="200dp"
        android:textColorHint="@color/colorAccent"
        android:layout_above="@+id/service_textInput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp">

        <android.support.design.widget.TextInputEditText
            android:paddingTop="15dp"
            android:id="@+id/year_car_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year_car_price"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:inputType="text|number"
            android:enabled="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/service_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColorHint="@color/colorAccent"
        android:layout_above="@+id/price_textInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputEditText
            android:paddingTop="15dp"
            android:id="@+id/service_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:inputType="textCapWords"
            android:enabled="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/price_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColorHint="@color/colorAccent"
        android:layout_above="@+id/fab"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="38dp">

        <android.support.design.widget.TextInputEditText
            android:paddingTop="15dp"
            android:id="@+id/price_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_price"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:inputType="text|numberDecimal"
            android:enabled="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/plus"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"/>
</RelativeLayout>